// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check mail with one default provider and one default template 1`] = `
"<h2>Template 4</h2>
<p>
  Some text... Info: %recipient.Template4_info%
</p>
"
`;

exports[`Check mail with one default provider and one default template 2`] = `
Object {
  "Template4_user": "Lada",
}
`;

exports[`Check mail with one default provider and one default template 3`] = `
Object {
  "payload": Object {
    "Provider1": true,
  },
  "status": "success",
}
`;

exports[`Check mail with one default provider and one default template of two templates 1`] = `
"<h2>Template 4</h2>
<p>
  Some text... Info: %recipient.Template4_info%
</p>
"
`;

exports[`Check mail with one default provider and one default template of two templates 2`] = `
Object {
  "Template4_user": "Lada",
}
`;

exports[`Check mail with one default provider and one default template of two templates 3`] = `
Object {
  "payload": Object {
    "Provider1": true,
  },
  "status": "success",
}
`;

exports[`Check mail with one default provider and one default template with nested templates 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>%recipient.Template1_title%</title>
  </head>
  <body>
    <h2>Template 1</h2>
    <p>
      Some text... Info: %recipient.Template1_info%
    </p>
    <div>
      <h2>Template 2</h2>
<p>
  Some text... Info: %recipient.Template2_info%
</p>
<p>Template 3 will here</p>
<div>
  <h2>Template 3</h2>
<p>
  Some text... Info: %recipient.Template3_info%
</p>
<p>Template 4 will here</p>
<div>
  <h2>Template 4</h2>
<p>
  Some text... Info: %recipient.Template4_info%
</p>

</div>

</div>

    </div>
    <div>
      <h2>Template 4</h2>
<p>
  Some text... Info: %recipient.Template4_info%
</p>

    </div>
    <div>
      <h2>Template 3</h2>
<p>
  Some text... Info: %recipient.Template3_info%
</p>
<p>Template 4 will here</p>
<div>
  <h2>Template 4</h2>
<p>
  Some text... Info: %recipient.Template4_info%
</p>

</div>

    </div>
  </body>
</html>
"
`;

exports[`Check mail with one default provider and one default template with nested templates 2`] = `
Object {
  "Template1_user": "Dmitriy",
  "Template2_user": "Oleg",
  "Template3_user": "Lena",
  "Template4_user": "Lada",
}
`;

exports[`Check mail with one default provider and one default template with nested templates 3`] = `
Object {
  "payload": Object {
    "Provider1": true,
  },
  "status": "success",
}
`;

exports[`Check mail with one default provider and one selected template of two templates 1`] = `
"<h2>Template 3</h2>
<p>
  Some text... Info: %recipient.Template3_info%
</p>
<p>Template 4 will here</p>
<div>
  <h2>Template 4</h2>
<p>
  Some text... Info: %recipient.Template4_info%
</p>

</div>
"
`;

exports[`Check mail with one default provider and one selected template of two templates 2`] = `
Object {
  "Template3_user": "Lena",
  "Template4_user": "Lada",
}
`;

exports[`Check mail with one default provider and one selected template of two templates 3`] = `
Object {
  "payload": Object {
    "Provider1": true,
  },
  "status": "success",
}
`;

exports[`Check mail with three providers with default provider and one default template 1`] = `
"<h2>Template 4</h2>
<p>
  Some text... Info: %recipient.Template4_info%
</p>
"
`;

exports[`Check mail with three providers with default provider and one default template 2`] = `
Object {
  "Template4_user": "Lada",
}
`;

exports[`Check mail with three providers with default provider and one default template 3`] = `
Object {
  "payload": Object {
    "Provider2": true,
  },
  "status": "success",
}
`;

exports[`Check mail with three providers with one selected provider and one default template 1`] = `
"<h2>Template 4</h2>
<p>
  Some text... Info: %recipient.Template4_info%
</p>
"
`;

exports[`Check mail with three providers with one selected provider and one default template 2`] = `
Object {
  "Template4_user": "Lada",
}
`;

exports[`Check mail with three providers with one selected provider and one default template 3`] = `
Object {
  "payload": Object {
    "Provider3": true,
  },
  "status": "success",
}
`;

exports[`Check mail with three providers with one selected provider and one selected template with nested structure 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>%recipient.Template1_title%</title>
  </head>
  <body>
    <h2>Template 1</h2>
    <p>
      Some text... Info: %recipient.Template1_info%
    </p>
    <div>
      <h2>Template 2</h2>
<p>
  Some text... Info: %recipient.Template2_info%
</p>
<p>Template 3 will here</p>
<div>
  <h2>Template 3</h2>
<p>
  Some text... Info: %recipient.Template3_info%
</p>
<p>Template 4 will here</p>
<div>
  <h2>Template 4</h2>
<p>
  Some text... Info: %recipient.Template4_info%
</p>

</div>

</div>

    </div>
    <div>
      <h2>Template 4</h2>
<p>
  Some text... Info: %recipient.Template4_info%
</p>

    </div>
    <div>
      <h2>Template 3</h2>
<p>
  Some text... Info: %recipient.Template3_info%
</p>
<p>Template 4 will here</p>
<div>
  <h2>Template 4</h2>
<p>
  Some text... Info: %recipient.Template4_info%
</p>

</div>

    </div>
  </body>
</html>
"
`;

exports[`Check mail with three providers with one selected provider and one selected template with nested structure 2`] = `
Object {
  "Template1_user": "Dmitriy",
  "Template2_user": "Oleg",
  "Template3_user": "Lena",
  "Template4_user": "Lada",
}
`;

exports[`Check mail with three providers with one selected provider and one selected template with nested structure 3`] = `
Object {
  "payload": Object {
    "Provider1": true,
  },
  "status": "success",
}
`;
